add translate pipe when need

--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -18,7 +18,7 @@
             <img src="assets/img/currency-icons/usd.svg">
           </div>
           <span style="min-width: 70px;">USD</span>
-          <span class="balance__currency-name">US Dollar</span>
+          <span class="balance__currency-name">{{'US Dollar' | translate}}</span>
         </div>
       </td>
       <td class="table__cell table__cell--tal">
@@ -60,11 +60,11 @@
       </svg>
     </div>
     <div class="qubera-txt">
-      <p>У Вас нету аккаунта в Qubera Bank</p>
-      <p>Для того что бы создать аккаунт нажмите кнопку ниже</p>
+      <p>{{'You do not have an account in Qubera Bank' | translate}}</p>
+      <p>{{'To create an account, click the button below' | translate}}</p>
     </div>
     <div class="qubera-btn-wr">
-      <button class="btn btn--active balance__title-btn">Create Account Qubera</button>
+      <button class="btn btn--active balance__title-btn">{{'Create Account Qubera' | translate}}</button>
     </div>
     
   </div>
