--- a/src/app/funds/balance/refill-money/refill-step-two/refill-inner-transfer/refill-inner-transfer.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-inner-transfer/refill-inner-transfer.component.html
@@ -9,7 +9,7 @@
     <!--Input error section starts-->
     <div class="input-hint-wrapper" *ngIf="!form.valid && form.get('code').touched">
           <span class="wrap-input__message">
-            This field is required.
+            {{'This field is required.' | translate}}
           </span>
     </div>
     <!--Input error section ends-->
