--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -48,7 +48,7 @@
         <div class="wrap-input send__wrap-input"
              *ngIf="cryptoInfoByName && !cryptoInfoByName.merchantCurrencyData.length">
           <div class="withdrawal__closed-error">
-            Sorry, withdrawal is closed for current moment!
+            {{'Sorry, withdrawal is closed for current moment!' | translate}}
           </div>
         </div>
 
