--- a/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-fiat/send-fiat.component.html
@@ -26,7 +26,7 @@
 
         <div class="wrap-input send__wrap-input" *ngIf="fiatInfoByName && !fiatInfoByName.merchantCurrencyData.length ">
           <div class="withdrawal__closed-error" >
-            Sorry, withdrawal is closed for current moment!
+            {{'Sorry, withdrawal is closed for current moment!' | translate}}
           </div>
         </div>
 
