--- a/src/app/ieo/components/ieo-how-it-works/ieo-how-it-works.component.html
+++ b/src/app/ieo/components/ieo-how-it-works/ieo-how-it-works.component.html
@@ -2,7 +2,7 @@
 <div class="ieo_how_it_work">
   <div class="ieo_how_it_work-wr">
     <div class="ieo_how_it_work-title">
-      <h3>How it work?</h3>
+      <h3>{{'How it work?' | translate}}</h3>
     </div>
     <div class="ieo_work-item-wr">
       <div class="ieo_how_it_work-item">
@@ -11,8 +11,8 @@
             <img src="assets/img/ieo/verification.svg" alt="">
           </div>
           <div class="text-container">
-            <h5>1. Verification</h5>
-            <p>Complete identity verification and accept the Token Purchase Agreement.</p>
+            <h5>1. {{'Verification' | translate}}</h5>
+            <p>{{'Complete identity verification and accept the Token Purchase Agreement.' | translate}}</p>
           </div>
           <div class="shape">
             <svg width="24" height="17" viewBox="0 0 24 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -29,8 +29,8 @@
             <img src="assets/img/ieo/balance.svg" alt="">
           </div>
           <div class="text-container">
-            <h5>2. BAlance</h5>
-            <p>Replenish your balance to purchase tokens.</p>
+            <h5>2. {{'BAlance' | translate}}</h5>
+            <p>{{'Replenish your balance to purchase tokens.' | translate}}</p>
           </div>
           <div class="shape">
             <svg width="24" height="17" viewBox="0 0 24 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -47,8 +47,8 @@
             <img src="assets/img/ieo/enter.svg" alt="">
           </div>
           <div class="text-container">
-            <h5>3. enter the number of token</h5>
-            <p>At the end of the countdown click button when it's active, enter the number of tokens, walkthrough the captcha and purchase.</p>
+            <h5>3. {{'enter the number of token' | translate}}</h5>
+            <p>{{"At the end of the countdown click button when it's active, enter the number of tokens, walkthrough the captcha and purchase." | translate}}</p>
           </div>
           <div class="shape">
             <svg width="24" height="17" viewBox="0 0 24 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -65,8 +65,8 @@
             <img src="assets/img/ieo/wait.svg" alt="">
           </div>
           <div class="text-container">
-            <h5>4. Wait tokens</h5>
-            <p>Wait for the tokens to be added to your balance within the specified time.</p>
+            <h5>4. {{'Wait tokens' | translate}}</h5>
+            <p>{{'Wait for the tokens to be added to your balance within the specified time.' | translate}}</p>
           </div>
           <div class="shape">
             <svg width="24" height="17" viewBox="0 0 24 17" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -83,8 +83,8 @@
             <img src="assets/img/ieo/trading.svg" alt="">
           </div>
           <div class="text-container">
-            <h5>5. Trading</h5>
-            <p>Trade when the tokens will be listed and trading starts within the specified time.</p>
+            <h5>5. {{'Trading' | translate}}</h5>
+            <p>{{'Trade when the tokens will be listed and trading starts within the specified time.' | translate}}</p>
           </div>
         </div>
       </div>
