--- a/src/app/popups/identity-popup/step-one/step-one.component.html
+++ b/src/app/popups/identity-popup/step-one/step-one.component.html
@@ -1,6 +1,6 @@
 <div class="title title-id modal__title">{{'Identity Verification' | translate}}</div>
 <div class="subtitle subtitle-id modal__subtitle">
-  <p>The information you fill in must be co consistent with the information in ID documents.</p>
+  <p>{{'The information you fill in must be co consistent with the information in ID documents.' | translate}}</p>
 </div>
 <form class="country-form" [formGroup]="form">
   <div class="input-wr">
@@ -13,7 +13,7 @@
 
         </div>
       </div>
-      <div class="select__label">Country</div>
+      <div class="select__label">{{'Country' | translate}}</div>
     </div>
     <!-- выпадающий список -->
 
@@ -27,13 +27,13 @@
   <div class="input-wr">
     <div class="wrap-input popup__wrap-input">
       <input class="wrap-input__input ng-dirty ng-valid ng-touched" type="text">
-      <label class="wrap-input__label" for="">Language</label>
+      <label class="wrap-input__label" for="">{{'Language' | translate}}</label>
     </div>
   </div>
   <div class="button-wr">
     <button class="btn btn--center verification-btn ">
       <span class="btn-text">
-        Verification
+        {{'Verification' | translate}}
       </span>
     </button>
   </div> 
