--- a/src/app/popups/two-factor-popup/sms/sms-step-two/sms-step-two.component.html
+++ b/src/app/popups/two-factor-popup/sms/sms-step-two/sms-step-two.component.html
@@ -20,6 +20,6 @@
   <div class="note__title">{{'Please note:' | translate}}</div>
   <ul class="note__list">
     <li class="note__list-item" translate>To attach this number, click the 'Pay and connect' button, the sms with the registration code will be sent to you. Each sms paid. the cost of one message for your phone number is <b>0.036015 USD.</b></li>
-    <li class="note__list-item" translate>You should have positive balance in <b>USD </b>on your account</li>
+    <li class="note__list-item">{{'You should have positive balance in ' | translate}}<b>USD </b>{{'on your account' | translate}}</li>
   </ul>
 </div>
