--- a/src/app/settings/api-keys/api-key-created/api-key-created.component.html
+++ b/src/app/settings/api-keys/api-key-created/api-key-created.component.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="refill__inputs-wrap">
-          <span class="key-label">Public key</span>
+          <span class="key-label">{{'Public key' | translate}}</span>
           <div class="select refill__select refill__select--cripto">
             <div class="select__value select__value--active">
               <span>{{newKey.publicKey}}</span>
@@ -22,7 +22,7 @@
         </div>
 
         <div class="refill__inputs-wrap">
-          <span class="key-label">Private key</span>
+          <span class="key-label">{{'Private key' | translate}}</span>
           <div class="select refill__select refill__select--cripto">
             <div class="select__value select__value--active">
               <span>{{newKey.privateKey}}</span>
@@ -42,10 +42,10 @@
         <div class="note__title">{{'Warning:' | translate}}</div>
         <ul class="note__list">
           <li class="note__list-item">
-            Please notice that the secret key will be shown only once.
+            {{'Please notice that the secret key will be shown only once.' | translate}}
           </li>
           <li class="note__list-item">
-            If you dont save it, you always will be able to create a new.
+            {{'If you dont save it, you always will be able to create a new.' | translate}}
           </li>
         </ul>
       </div>
