--- a/src/app/settings/verification/verification.component.html
+++ b/src/app/settings/verification/verification.component.html
@@ -154,11 +154,11 @@
     </div>
     <div
       class="subtitle settings__content-subtitle">{{'Your KYC procedure is processing, press ' | translate}}
-      <a class="standart-link" style="cursor: pointer" (click)="restartProcedure()">Restart</a>
+      <a class="standart-link" style="cursor: pointer" (click)="restartProcedure()">{{'Restart' | translate}}</a>
       {{' to restart procedure' | translate}}</div>
     <div class="row settings__buttons-row checkbox-outher">
-      <button class="btn settings__form-btn settings__password-btn settings__form-btn--active" routerLink="/">Go to
-        dashboard
+      <button class="btn settings__form-btn settings__password-btn settings__form-btn--active" routerLink="/">
+        {{'Go to dashboard' | translate}}
       </button>
     </div>
   </div>
@@ -171,8 +171,8 @@
     <div
       class="subtitle settings__content-subtitle">{{'Your ID information has been verified.' | translate}}</div>
     <div class="row settings__buttons-row checkbox-outher">
-      <button class="btn settings__form-btn settings__password-btn settings__form-btn--active" routerLink="/">Go to
-        dashboard
+      <button class="btn settings__form-btn settings__password-btn settings__form-btn--active" routerLink="/">
+        {{'Go to dashboard' | translate}}
       </button>
     </div>
   </div>
