--- a/src/app/static-pages/about-us/about-us.component.html
+++ b/src/app/static-pages/about-us/about-us.component.html
@@ -5,7 +5,7 @@
         {{'About us' | translate}}
       </h1>
     </div>
-    <p class="static-pages__paragraph" translate>Exrates is an actively-growing platform. Creating comfortable and practical conditions for using the Exchange is our priority.</p>
+    <p class="static-pages__paragraph">{{'Exrates is an actively-growing platform. Creating comfortable and practical conditions for using the Exchange is our priority.' | translate}}</p>
     <h6 class="subtitle">{{'This is' | translate}}</h6>
     <ul class="static-pages__list">
       <li>{{'Minimum commission:' | translate}}</li>
@@ -13,11 +13,11 @@
       <li>{{'Maximum security:' | translate}}</li>
       <p class="static-pages__paragraph static-pages__paragraph--grey">{{'Potential errors, that could harm the data storage security, have been provided and corrected' | translate}}.</p>
       <li>{{'Easy usability:' | translate}}</li>
-      <p class="static-pages__paragraph static-pages__paragraph--grey" translate>We have engaged experienced users of exchange systems and assistants without experience with exchanges for help in the development of usability. The results is a high-quality optimal concept that will change and improve according to the new trends in the development of exchanges.</p>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">{{'We have engaged experienced users of exchange systems and assistants without experience with exchanges for help in the development of usability. The results is a high-quality optimal concept that will change and improve according to the new trends in the development of exchanges.' | translate}}</p>
       <li>{{'Сurrency' | translate}}</li>
-      <p class="static-pages__paragraph static-pages__paragraph--grey" translate> Exchange provides an opportunity not only to exchange currency such heavyweights as Bitcoin, but the actual perspective cryptocurrency such as EDRCoin.<br>You can also refill/withdraw and exchange USD, EUR, RUB, UAH, IDR to cryptocurrency.</p>
+      <p class="static-pages__paragraph static-pages__paragraph--grey"> {{'Exchange provides an opportunity not only to exchange currency such heavyweights as Bitcoin, but the actual perspective cryptocurrency such as EDRCoin.' | translate}}<br>{{'You can also refill/withdraw and exchange USD, EUR, RUB, UAH, IDR to cryptocurrency.' | translate}}</p>
       <li>{{'Transfers between usersy' | translate}}</li>
-      <p class="static-pages__paragraph static-pages__paragraph--grey" translate>You need to know ONLY users nickname at the system for money transfer.</p>
+      <p class="static-pages__paragraph static-pages__paragraph--grey">{{'You need to know ONLY users nickname at the system for money transfer.' | translate}}</p>
       <li>{{'ONLINE LIVE SUPPORT CHAT 24/7' | translate}}</li>
       <p class="static-pages__paragraph static-pages__paragraph--grey">{{'Our support team is always online and ready to help you!' | translate}}</p>
       <li>{{'Not only English localization' | translate}}</li>
@@ -31,11 +31,11 @@
         {{'- Indonesia' | translate}}
       </p>
       <li>{{'Exchange tools:' | translate}}</li>
-      <p class="static-pages__paragraph static-pages__paragraph--grey" translate>
-        Our playground is suitable for both beginners who want to exchange their money with another user at the market rate, and experienced traders.
+      <p class="static-pages__paragraph static-pages__paragraph--grey">
+        {{'Our playground is suitable for both beginners who want to exchange their money with another user at the market rate, and experienced traders.' | translate}}
       </p>
     </ul>
-    <p class="static-pages__paragraph"><b translate>We are working hard for making Exrates.me better!</b></p>
+    <p class="static-pages__paragraph"><b>{{'We are working hard for making Exrates.me better!' | translate}}</b></p>
 
     <p class="static-pages__paragraph"><b>{{'We improve our service and looking for new best options for growing up!' | translate}}</b></p>
 
