--- a/src/app/static-pages/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/static-pages/terms-and-conditions/terms-and-conditions.component.html
@@ -10,13 +10,13 @@
     <ul class="static-pages__list">
       <li translate>This user Agreement is an electronic agreement between the User and Exrates.me - the operator that provides to Users online tool, that allows to trade with virtual currencies all over the world.
       </li>
-      <li translate>This Agreement permanently located at <a href="https://exrates.me/termsAndConditions" class="link">https://exrates.me/termsAndConditions</a> and contains all conditions of the public offer of the Exrates.me.
+      <li>{{'This Agreement permanently located at ' | translate}}<a href="https://exrates.me/termsAndConditions" class="link">https://exrates.me/termsAndConditions</a> {{'and contains all conditions of the public offer of the Exrates.me.' | translate}}
       </li>
       <li translate>When the User creating an account on the Site or starting to use any other Services which is provided by Exrates.me, User confirm that it read, understand, and completely agree to this Agreement in effect from time to time.
       </li>
     </ul>
-    <p class="static-pages__paragraph" translate>IF YOU DO NOT AGREE WITH THE CONDITIONS OF THIS USER AGREEMENT, PLEASE DO NOT REGISTER ON THE WEB-SITE:<a href="https://exrates.me" class="link">HTTPS://EXRATES.ME</a>AND DO NOT START TO USE ITS SERVICES AND EXIT THE SITE IMMEDIATELY.</p>
-    <p class="static-pages__paragraph" translate>Exrates.me AND USERS OF THE ONLINE TOOL WHICH IS LOCATED AT<a href="https://exrates.me" class="link">HTTPS://EXRATES.ME</a> HAVE CONCLUDED THE PRESENT AGREEMENT ON THE FOLLOWING CONDITIONS:</p>
+    <p class="static-pages__paragraph">{{'IF YOU DO NOT AGREE WITH THE CONDITIONS OF THIS USER AGREEMENT, PLEASE DO NOT REGISTER ON THE WEB-SITE:' | translate}}<a href="https://exrates.me" class="link">HTTPS://EXRATES.ME</a>{{'AND DO NOT START TO USE ITS SERVICES AND EXIT THE SITE IMMEDIATELY.' | translate}}</p>
+    <p class="static-pages__paragraph">{{'Exrates.me AND USERS OF THE ONLINE TOOL WHICH IS LOCATED AT' | translate}}<a href="https://exrates.me" class="link">HTTPS://EXRATES.ME</a> {{'HAVE CONCLUDED THE PRESENT AGREEMENT ON THE FOLLOWING CONDITIONS:' | translate}}</p>
 
     <h6 class="subtitle">{{'Terms and conditions' | translate}}</h6>
     <ul class="static-pages__list">
@@ -26,7 +26,7 @@
 
     <h6 class="subtitle">{{'Local restrictions and important law information' | translate}}</h6>
     <ul class="static-pages__list">
-      <li translate>By registering at the Website, you agree that you will never use the Service for any illegal purposes including but not limited to money laundering, illegal gambling operations, financing of terrorism or hacking and that you are at least 18 years old and you have a legal capacity to trade on the <a href="https://exrates.me" class="link">https://exrates.me</a>
+      <li>{{'By registering at the Website, you agree that you will never use the Service for any illegal purposes including but not limited to money laundering, illegal gambling operations, financing of terrorism or hacking and that you are at least 18 years old and you have a legal capacity to trade on the' | translate}} <a href="https://exrates.me" class="link">https://exrates.me</a>
       </li>
       <li translate>We inform you, that virtual currency and operation with it may vary laws regulations different countries. Please, make sure that you are not breaking the law of the country in which you reside and/or the country from which you access the Internet.
       </li>
