--- a/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.html
+++ b/src/app/shared/components/dynamic-input-dashboard/dynamic-input-dashboard.component.html
@@ -15,7 +15,7 @@
       required
     >
     <div class="dynamic-input__triangle"></div>
-    <span class="dynamic-input__label">Search</span>
+    <span class="dynamic-input__label">{{'Search' | translate}}</span>
   </div>
 
   <!--<div class="wrap-input__icon" *ngIf="icon" [innerHTML]="icon"></div>-->
